--- a/src/components/CreateCake/CreateCake.css
+++ b/src/components/CreateCake/CreateCake.css
@@ -1,66 +1,121 @@
-input{
-    border: 1px solid #000;
+.create-cake__container.container{
+    max-width: 1000px;
 }
 
-.create-cake__container{
-    max-width: 1000px;
+.create-cake{
+    padding-bottom: 40px;
 }
 
 .create-cake__title{
     color: rgba(1, 25, 54, 1);
     font-size: 35px;
+    font-family: "Yeseva One";
+    font-weight: 600;
+    margin-bottom: 40px;
 }
 
+.create-cake__item{
+    margin-bottom: 40px;
+}
 
+.create-cake__caption{
+    color: rgba(67, 96, 124, 1);
+    font-weight: 700;
+    font-family: "Verdana";
+    margin-bottom: 5px;
+}
 
-
-
-.images-preview {
-    display: flex;
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    gap: 10px;
-    margin: 10px 0;
-  }
-  
-  .image-item {
-    position: relative;
-  }
-  
-  .image-item img {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    border-radius: 10px;
-    border: 1px solid #ccc;
-  }
-  
-  .delete-btn {
-    position: absolute;
-    top: -6px;
-    right: -6px;
-    background: #ff4d4f;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    width: 22px;
-    height: 22px;
+.create-cake__description{
+    color: rgba(132, 166, 194, 1);
     font-size: 14px;
-    cursor: pointer;
-    line-height: 1;
-    padding: 0;
-  }
-  
-  .add-photo {
+    margin-bottom: 10px;
+    max-width: 550px;
+}
+
+.create-cake__input{
+    width: 100%;
+    border: 1px solid rgba(223, 223, 223, 1);
+    padding: 10px 20px;
+    border-radius: 20px;
+}
+
+.create-cake__submit{
+    padding: 10px 30px;
+    background-color: rgba(166, 58, 80, 1);
+    color: rgba(255, 255, 255, 1);
+    border-radius: 25px;
+    font-weight: 700;
+    font-family: "Verdana";
+    font-size: 18px;
+}
+
+.create-cake__price{
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 100px;
-    height: 100px;
-    border: 2px dashed #ccc;
-    border-radius: 10px;
+    column-gap: 15px;
+}
+
+.create-cake__price input{
+    max-width: 150px;
+}
+
+.create-cake__text{
+    color: rgba(67, 96, 124, 1);
+    font-family: "Verdana";
+}
+
+.create-cake__add-photo {
+    display: inline-flex;
+    align-items: center;
+    column-gap: 10px;
+    border: 2px solid rgba(166, 58, 80, 1);
+    border-radius: 25px;
+    padding: 10px 20px;
     cursor: pointer;
     color: #a63a50;
     font-weight: bold;
-    font-size: 14px;
-  }
+    font-family: "Verdana";
+    margin-bottom: 20px;
+}
+
+.create-cake__images {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.create-cake__image-item {
+    position: relative;
+    width: 150px;
+    height: 150px;
+}
+  
+.create-cake__image-item #img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+  
+.create-cake__image-delete {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    background-color: rgba(255, 255, 255, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.create-cake__error{
+    color: rgba(166, 58, 80, 1);
+    margin-top: 5px;
+}
+
+.create-cake__wrap{
+    display: flex;
+    justify-content: flex-end;
+}
